estilizando página inicial

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo.png" alt="" class="header__logo">
+      <a href="#"><img src="./images/logo.png" alt="" class="header__logo"></a>
       <nav class="header__navigation">
         <ul class="header__menu">
           <li><a href="#" class="header__item-menu">Idioma</a></li>
@@ -35,6 +35,13 @@
       <div class="main__content">
         <h1 class="main__title">Guiando a lugares incríveis</h1>
         <h3 class="main__subtitle">Turbine sua viagem com experiências fantásticas</h3>
+      </div>
+      <div class="main__where">
+        <form action="#" class="main__form">
+          <input type="text" class="main__input" placeholder="Qual seu destino?">
+          <input type="submit" value="Buscar" class="main__button">
+          <p class="main__paragraph">Clique <a href="#" class="main__filter">aqui</a> para outros filtros</p>
+        </form>
       </div>
     </main>
   </div>
